# aiodispatch

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml  publish.yml  test.yml
examples/: simple.py
tests/: conftest.py  test_decorators.py  test_dispatch.py  test_enums.py  test_tasks.py  test_tests.py  test_utils.py  test_worker.py  utils.py
tests/brokers/: test_memory.py
tests/dummies/: foo.py
tests/serializers/: test_json.py
